--- a/NuGetCecil/FodyCecil.nuspec
+++ b/NuGetCecil/FodyCecil.nuspec
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata minClientVersion="2.8" >
+  <metadata>
     <id>FodyCecil</id>
     <version>$version$</version>
     <title>FodyCecil</title>
