--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -32,12 +32,12 @@
     <ProjectReference Include="..\SampleWeaver.Fody\SampleWeaver.Fody.csproj" />
     <Content Include="Fody\NugetConfig*.txt" CopyToOutputDirectory="Always" />
     <Content Include="Fody\FakeNuGetPackageRoot\**\*.*" CopyToOutputDirectory="Always" />
-    <Content Include="Fody\PeVerifierTests_*.*" CopyToOutputDirectory="Always"/>
+    <Content Include="Fody\PeVerifierTests_*.*" CopyToOutputDirectory="Always" />
     <None Include="Fody\NugetPackagePathFinder\FakeSolutionWithNestedNugetConfig\.nuget\nuget.config" CopyToOutputDirectory="Always" />
     <Content Include="Fody\BadAssembly.dll" CopyToOutputDirectory="Always" />
-    <Content Include="Fody\**\*.*" CopyToOutputDirectory="Always" />
     <Content Include="Fody\Packages\SampleWeaver.Fody.1.0.0.0\SampleWeaver.Fody.dll" CopyToOutputDirectory="Always" />
-    <Content Include="Fody\Solution\**\*.*" CopyToOutputDirectory="Always"/>
+    <Content Include="Fody\Solution\**\*.*" CopyToOutputDirectory="Always" />
     <Content Include="Fody\WeaversProjectFileFinder\**\*.*" CopyToOutputDirectory="Always" />
+    <Content Include="Fody\ProjectWeaversReaderTests\*.xml" CopyToOutputDirectory="Always" />
   </ItemGroup>
 </Project>
