--- a/Integration/Tests/Tests.csproj
+++ b/Integration/Tests/Tests.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.*" />
-    <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj"/>
-    <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj"/>
-    <ProjectReference Include="..\WithNugetWeavers\WithNugetWeavers.csproj"/>
-    <ProjectReference Include="..\WithOnlyInSolutionWeaver\WithOnlyInSolutionWeaver.csproj"/>
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj" />
+    <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj" />
+    <ProjectReference Include="..\WithNugetWeavers\WithNugetWeavers.csproj" />
+    <ProjectReference Include="..\WithOnlyInSolutionWeaver\WithOnlyInSolutionWeaver.csproj" />
   </ItemGroup>
 </Project>
