--- a/NuGet/Nuget.csproj
+++ b/NuGet/Nuget.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+    <NoWarn>CS2008</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="PepitaPackage" Version="1.*" />
