fix package name

--- a/NuGet/FodyHelpers.nuspec
+++ b/NuGet/FodyHelpers.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>FodyHelper</id>
+    <id>FodyHelpers</id>
     <version>$version$</version>
     <title>FodyHelper</title>
     <authors>Simon Cropp</authors>
