--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,7 @@
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
 ForIntegration/
-NuGetCecilBuild/
-NuGetHelpersBuild/
-NugetBuild/
-ChocolateyNuGetBuild/
+nugets/
 
 # Visual Studio profiler
 *.psess
