--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
+    <PackageVersion>2.3.0</PackageVersion>
+    <Title>Fody</Title>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <NoWarn>CS1591</NoWarn>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyOriginatorKeyFile>$(SolutionDir)Key.snk</AssemblyOriginatorKeyFile>
+    <NoPackageAnalysis>true</NoPackageAnalysis>
+    <PackageLicenseUrl>http://www.opensource.org/licenses/mit-license.php</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
+    <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);IncludeAllInPackage</TargetsForTfmSpecificContentInPackage>
+    <Authors>Simon Cropp</Authors>
+    <PackageProjectUrl>http://github.com/Fody/Fody</PackageProjectUrl>
+    <PackageIconUrl>https://raw.github.com/Fody/Fody/master/Icons/package_icon.png</PackageIconUrl>
+    <PackageTags>ILWeaving, Fody, Cecil, AOP</PackageTags>
   </PropertyGroup>
 </Project>
