--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -38,10 +38,11 @@
     <ProjectWeaverXml>$(ProjectDir)FodyWeavers.xml</ProjectWeaverXml>
     <FodySignAssembly Condition="$(FodySignAssembly) == '' Or $(FodySignAssembly) == '*Undefined*'">$(SignAssembly)</FodySignAssembly>
     <FodyPath Condition="$(FodyPath) == '' Or $(FodyPath) == '*Undefined*'">$(MSBuildThisFileDirectory)..\..\</FodyPath>
+    <FodyAssembly>$(FodyPath)tasks\net452\Fody.dll</FodyAssembly>
   </PropertyGroup>
   <UsingTask
       TaskName="Fody.WeavingTask"
-      AssemblyFile="$(FodyPath)\Fody.dll" />
+      AssemblyFile="$(FodyAssembly)" />
   <Target
       AfterTargets="AfterCompile"
       Condition="Exists('@(IntermediateAssembly)') And '$(DesignTimeBuild)' != 'true'"
@@ -81,7 +82,7 @@
 
   <UsingTask
     TaskName="Fody.VerifyTask"
-    AssemblyFile="$(FodyPath)\Fody.dll" />
+    AssemblyFile="$(FodyAssembly)" />
   <Target Condition="'$(NCrunch)' != '1' And ('$(FodyWeavingTargetWasRun)' == 'True')"
       AfterTargets="AfterBuild"
       Name="FodyVerifyTarget"
