--- a/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
+++ b/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WithNugetAndInSolutionWeavers</RootNamespace>
     <AssemblyName>WithNugetAndInSolutionWeavers</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
